--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 annotated-types==0.7.0
 black==25.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.0
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.60.1
+idna==3.11
+joblib==1.5.2
 kiwisolver==1.4.9
 matplotlib==3.10.7
 mypy_extensions==1.1.0
 numpy==2.3.4
 packaging==25.0
+pandas==2.3.3
 pathspec==0.12.1
 pillow==12.0.0
 platformdirs==4.5.0
@@ -18,7 +23,138 @@ pyfiglet==1.0.4
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytokens==0.2.0
+pytz==2025.2
+requests==2.32.5
+scikit-learn==1.7.2
 scipy==1.16.3
 six==1.17.0
+threadpoolctl==3.6.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+annotated-types==0.7.0
+black==25.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.0
+contourpy==1.3.3
+cycler==0.12.1
+fonttools==4.60.1
+idna==3.11
+joblib==1.5.2
+kiwisolver==1.4.9
+matplotlib==3.10.7
+mypy_extensions==1.1.0
+numpy==2.3.4
+packaging==25.0
+pathspec==0.12.1
+pillow==12.0.0
+platformdirs==4.5.0
+pyarrow==22.0.0
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyfiglet==1.0.4
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytokens==0.2.0
+pytz==2025.2
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.3
+six==1.17.0
+threadpoolctl==3.6.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+annotated-types==0.7.0
+black==25.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.0
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.20.0
+fonttools==4.60.1
+fsspec==2025.10.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mpmath==1.3.0
+mypy_extensions==1.1.0
+networkx==3.5
+numpy==2.3.4
+packaging==25.0
+pathspec==0.12.1
+pillow==12.0.0
+platformdirs==4.5.0
+pyarrow==22.0.0
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyfiglet==1.0.4
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytokens==0.2.0
+pytz==2025.2
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.3
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.9.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+annotated-types==0.7.0
+black==25.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.0
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.20.0
+fonttools==4.60.1
+fsspec==2025.10.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mpmath==1.3.0
+mypy_extensions==1.1.0
+networkx==3.5
+numpy==2.3.4
+packaging==25.0
+pathspec==0.12.1
+pillow==12.0.0
+platformdirs==4.5.0
+pyarrow==22.0.0
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyfiglet==1.0.4
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytokens==0.2.0
+pytz==2025.2
+regex==2025.11.3
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.3
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+torch==2.9.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
